v1.3.13 (2019.02.xx)
  - Add logging of detected stream properties (real-time, seekable, etc) when opening Live TV or Recorded TV streams

v1.3.12 (2019.02.02)
  - Fix bug introduced in v1.3.11 that prevented EPG listings for channels with subchannels (x.x) from loading

v1.3.11 (2019.02.02)
  - Update libhdhomerun library to version 2018.10.27
  - Use pipelined/multiplexed HTTP requests when accessing backend EPG data
  - (Android) Restrict exported symbols to prevent name collisions with shared libraries

v1.3.10 (2019.01.28)
  - Add "Use simplified (flattened) file hierarchy" Edit Decision List (EDL) setting
  - Add "Report CUT indicators as COMBREAK indicators" EDL setting
  - Rename "Start time padding (milliseconds)" EDL setting to "CUT indicator start time padding (milliseconds)"
  - Rename "End time padding (milliseconds)" EDL setting to "CUT indicator end time padding (milliseconds)"
  - Correct improperly specified units of time from "ms" to "s" when logging the parsed EDL file entries
  - Add log message indicating the expected path to an EDL file that could not be found
  - Disable IPv6 DNS (AAAA record) lookups when querying the backend services

v1.3.9 (2019.01.04)
  - Update cURL library to version 7.63.0
  - Display notification when no tuner device(s) were detected during startup

v1.3.8 (2018.12.23)
  - Add "Disable discovery of HDHomeRun RECORD devices" advanced setting
  - Add "Use channel names from tuner device(s) in channel lineups" setting

v1.3.7 (2018.12.09)
  - Update SQLite database engine to version 3.26.0
  - Update cURL library to version 7.62.0
  - Improve performance of Recorded TV last played (resume) position discovery

v1.3.6 (2018.12.01)
  - Fix bug in DVR stream packet filter causing an access violation if a PSI packet with a table ID of 0xFF is encountered

v1.3.5 (2018.10.13)
  - Update SQLite database engine to version 3.25.2